feat: balance key and balance calculations logic
